# chat-application-frontend

./: CMakeLists.txt  index.js  package-lock.json  package.json  tsconfig.json
android/: build.gradle  gradle.properties
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/frontend/: MainActivity.kt
src/: App.js  styles.js
src/components/: Chat.js  ChatScreen.js  LoginScreen.js  SignupScreen.js  chat.css
src/redux/: store.js
src/redux/slices/: authSlice.js  chatSlice.js
src/services/: firebase.js  websocketService.js
